@@ -290,6 +290,10 @@ possibly turned off."
 	(cons x  (cons between y))))
   (fold-right conc #f lst))
 
+
+(define-public (string-regexp-substitute a b str)
+  (regexp-substitute/global #f a str 'pre b 'post)) 
+
 ;;;;;;;;;;;;;;;;
 ; other
 (define (sign x)
